Decreased font size of new contact and new frequency forms for small screen sizes to prevent overflow

--- a/styles.css
+++ b/styles.css
@@ -276,6 +276,16 @@ input {
   background: #fff;
 }
 
+#newContact__input, #newFrequency__input {
+  width: 90%;
+}
+
+@media only screen and (max-width: 400px) {
+  #newContact__input, #newFrequency__input {
+    font-size: 16px;
+  }
+}
+
 #newContact__submit {
   width: auto;
 }
